Thu Mar 27 09:43:02 1997  GNUstep Development  <gnustep@net-community.com>

	* Headers/gnustep/gui/NSApplication.h (-peekNextEvent): New method.
	(-peekEventMatchingMask:untilDate:inMode:dequeue:): New method.
	* Source/NSApplication.m (-peekNextEvent): New method.
	(-peekEventMatchingMask:untilDate:inMode:dequeue:): New method.
	* Source/NSControl.m (-setAlignment:): Display if needed.
	* Source/NSScroller.m (-trackKnob:): Set the value of the cell
	manually to prevent automatic redisplay of scroller.

Thu Mar 20 10:40:51 1997  GNUstep Development  <gnustep@net-community.com>

	* Source/NSControl.m: Call displayIfNeeded after setting the
	contents of the cell.
	(-copyWithZone:): Copy the object instead of
	allocating so that instance variable values are copied.  Retain
	the cell because it will be released when we set a new one.
	(-drawCell:, -drawCellInside:): Lock and unlock the focus
	when drawing the cell.
	* Source/NSImage.m (_base_name, extension): Delete functions; 
	functionality is now provided by NSString.
	(+imageNamed:) Use NSString methods instead of local functions for
	obtaining base name and extension.  Check if extension is one of
	the image types before deleting.
	(-useFromFile:): Use NSString methods instead of local functions
	for obtaining the extension.
	* Source/NSScroller.m (-setFloatValue:knobProportion:): Set knob
	proportion first before setting float value.
	(-setFloatValue:): Indicate needs display.
	(-drawRect:): Remove method.
	(-drawParts): Flush window.
	(-trackKnob:): Correct position of knob relative to pointer.  Lock
	and unlock the focus; make sure it is unlocked before sending action.
	(-trackScrollButtons:): Fill out implementation.
	(-mouseDown:): Lock and unlock focus in the tracking methods instead.
	* Source/NSTextField.m (-setTextCursor:, -copyWithZone:): New methods.
	* Source/NSTextFieldCell.m (-initTextCell:): By default 
	it draws the background.
	* Source/NSView.m (-ancestoreSharedWithView:): Implement.