@@ -79,7 +79,7 @@
 	
   background_color = [NSColor whiteColor];
   text_color = [NSColor blackColor];
-  cell_font = [NSFont systemFontOfSize:12];
+  cell_font = [NSFont systemFontOfSize:16];
   draw_background = YES;
   return self;
 }
